--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
     "rust-analyzer.cargo.target": "aarch64-none-elf.json",
+    "rust-analyzer.checkOnSave.allTargets": false,
+    "rust-analyzer.checkOnSave.extraArgs": [
+        "--target",
+        "aarch64-none-elf.json"
+    ]
 }
