--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,13 @@
 [unstable]
 build-std = ["core", "compiler_builtins", "alloc"]
 build-std-features = ["compiler-builtins-mem"]
+
+[alias]
+run-stopped = ["run", "--release", "--", "-S"]
+
+[build]
+target = "./targets/aarch64-none-elf.json"
+incremental = false
+
+[target."aarch64-none-elf"]
+runner = "./scripts/run_kernel"
