--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "rpi_kern_rs"
+name = "boldos"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[lib]
-crate-type = ["staticlib"]
 
 [profile.dev]
 panic = "abort"
@@ -27,6 +24,3 @@ linked_list_allocator = "0.9"
 spin = "0.5"
 qemu-exit = "2.0.0"
 async-trait = "0.1.50"
-#arrayvec = { version = "0.7.1", default-features = false }
-#serde = { version = "1.0", default-features = false, features = ["derive"] }
-#bincode-no-std = "1.0.0"
