--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,9 @@ jobs:
       - name: Create builder image
         run: docker build -t boldos-build ${{github.workspace}}
       - name: Build
-        run: docker run --rm -it -w /wd -v ${{github.workspace}}:/wd -v /tmp/cargo-registry-cache:/root/.cargo/registry -v /tmp/xargo-cache:/root/.xargo -v /tmp/build-cache:/wd/target boldos-build 'bash' '-c' '. $HOME/.cargo/env && xargo build --release'
+        run: docker run --rm -w /wd -v ${{github.workspace}}:/wd -v /tmp/cargo-registry-cache:/root/.cargo/registry -v /tmp/xargo-cache:/root/.xargo -v /tmp/build-cache:/wd/target boldos-build 'bash' '-c' '. $HOME/.cargo/env && xargo build --release'
       - name: Clippy
-        run: docker run --rm -it -w /wd -v ${{github.workspace}}:/wd -v /tmp/cargo-registry-cache:/root/.cargo/registry -v /tmp/xargo-cache:/root/.xargo -v /tmp/build-cache:/wd/target boldos-build 'bash' '-c' '. $HOME/.cargo/env && cargo clippy --release'
+        run: docker run --rm -w /wd -v ${{github.workspace}}:/wd -v /tmp/cargo-registry-cache:/root/.cargo/registry -v /tmp/xargo-cache:/root/.xargo -v /tmp/build-cache:/wd/target boldos-build 'bash' '-c' '. $HOME/.cargo/env && cargo clippy --release'
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
