--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,13 +29,29 @@ jobs:
         continue-on-error: true
       - name: Fix cache permissions
         run: sudo chmod -R a+rwx /tmp/cargo-registry-cache /tmp/build-cache /tmp/xargo-cache
+
+#      Github actions sucks :(
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: build-aarch64
-          path: |
-            /tmp/build-cache/aarch64-none-elf/release/boldos
-            /tmp/build-cache/aarch64-none-elf/release/boldos.bin
-            /tmp/build-cache/aarch64-none-elf/release/initrd.tar
-            /tmp/build-cache/aarch64-none-elf/release/disk.img
+          path: /tmp/build-cache/aarch64-none-elf/release/boldos
+          if-no-files-found: error
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: build-aarch64
+          path: /tmp/build-cache/aarch64-none-elf/release/boldos.bin
+          if-no-files-found: error
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: build-aarch64
+          path: /tmp/build-cache/aarch64-none-elf/release/initrd.tar
+          if-no-files-found: error
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: build-aarch64
+          path: /tmp/build-cache/aarch64-none-elf/release/disk.img
           if-no-files-found: error
