--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,31 +27,17 @@ jobs:
       - name: Clippy
         run: docker run --rm -w /wd -v ${{github.workspace}}:/wd -v /tmp/cargo-registry-cache:/root/.cargo/registry -v /tmp/xargo-cache:/root/.xargo -v /tmp/build-cache:/wd/target wazzaps/boldos-build 'bash' '-c' '. $HOME/.cargo/env && cargo clippy --release'
         continue-on-error: true
+      - name: Build Kernel Accessories
+        run: docker run --rm -w /wd -v ${{github.workspace}}:/wd -v /tmp/cargo-registry-cache:/root/.cargo/registry -v /tmp/xargo-cache:/root/.xargo -v /tmp/build-cache:/wd/target wazzaps/boldos-build 'bash' '-c' '. $HOME/.cargo/env && ./scripts/prepare_kernel_accessories.sh target/aarch64-none-elf/release/boldos'
       - name: Fix cache permissions
         run: sudo chmod -R a+rwx /tmp/cargo-registry-cache /tmp/build-cache /tmp/xargo-cache
-
-#      Github actions sucks :(
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: build-aarch64
-          path: /tmp/build-cache/aarch64-none-elf/release/boldos
-          if-no-files-found: error
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: build-aarch64
-          path: /tmp/build-cache/aarch64-none-elf/release/boldos.bin
-          if-no-files-found: error
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: build-aarch64
-          path: /tmp/build-cache/aarch64-none-elf/release/initrd.tar
-          if-no-files-found: error
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: build-aarch64
-          path: /tmp/build-cache/aarch64-none-elf/release/disk.img
+          path: |
+            /tmp/build-cache/aarch64-none-elf/release/boldos
+            /tmp/build-cache/aarch64-none-elf/release/boldos.bin
+            /tmp/build-cache/aarch64-none-elf/release/initrd.tar
+            /tmp/build-cache/aarch64-none-elf/release/disk.img
           if-no-files-found: error
