--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-    "rust-analyzer.cargo.target": "aarch64-none-elf.json",
+    "rust-analyzer.cargo.target": "targets/aarch64-none-elf.json",
     "rust-analyzer.checkOnSave.allTargets": false,
     "rust-analyzer.checkOnSave.extraArgs": [
         "--target",
-        "aarch64-none-elf.json"
+        "targets/aarch64-none-elf.json"
     ]
 }
