--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ linked_list_allocator = "0.9"
 spin = "0.5"
 qemu-exit = "2.0.0"
 async-trait = "0.1.50"
+futures = { version = "0.3", default-features = false, features = ["alloc"] }
