--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Cache Cargo packages
         uses: actions/cache@v2
         with:
-          key: boldos-caches
+          key: boldos-caches-2
           path: |
             /tmp/cargo-registry-cache
             /tmp/build-cache
