--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,18 @@ edition = "2018"
 panic = "abort"
 lto = true
 debug = true
+opt-level = 'z'
 
 [profile.test]
 lto = true
 debug = true
+opt-level = 'z'
 
 [profile.release]
 panic = "abort"
 lto = true
 debug = true
+opt-level = 'z'
 
 [dependencies]
 linked_list_allocator = "0.9"
@@ -25,3 +28,4 @@ spin = "0.5"
 qemu-exit = "2.0.0"
 async-trait = "0.1.50"
 futures = { version = "0.3", default-features = false, features = ["alloc"] }
+arrayvec = { version = "0.7.1", default-features = false }
