--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ qemu-exit = "2.0.0"
 async-trait = "0.1.50"
 futures = { version = "0.3", default-features = false, features = ["alloc"] }
 arrayvec = { version = "0.7.1", default-features = false }
+dtb = "0.2.0"
