--- a/.github/workflows/rust-nightly-ci.yml
+++ b/.github/workflows/rust-nightly-ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [ master temp/hacky_code ]
   pull_request:
     branches: [ master ]
+  workflow_dispach:
 
 env:
   CARGO_TERM_COLOR: always
