--- a/.github/workflows/rust-nightly-ci.yml
+++ b/.github/workflows/rust-nightly-ci.yml
@@ -21,6 +21,7 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
           toolchain: nightly
+          target: aarch64-unknown-linux-gnu
           override: true
           components: rustfmt, clippy, rust-src
     - name: Build
