--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ futures = { version = "0.3", default-features = false, features = ["alloc"] }
 arrayvec = { version = "0.7.1", default-features = false }
 dtb = "0.2.0"
 tar-parser = { path = "externals/tar-parser.rs", default-features = false}
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
