--- a/.github/workflows/security_audit.yml
+++ b/.github/workflows/security_audit.yml
@@ -4,6 +4,8 @@ on:
     paths: 
       - '**/Cargo.toml'
       - '**/Cargo.lock'
+  workflow_dispatch:
+
 jobs:
   security_audit:
     runs-on: ubuntu-latest
