--- a/.github/workflows/rust-nightly-ci.yml
+++ b/.github/workflows/rust-nightly-ci.yml
@@ -2,7 +2,7 @@ name: Nightly Rust CI Build
 
 on:
   push:
-    branches: [ master temp/hacky_code ]
+    branches: [ master, temp/hacky_code ]
   pull_request:
     branches: [ master ]
   workflow_dispatch:
@@ -21,7 +21,6 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
           toolchain: nightly
-          target: aarch64-unknown-linux-gnu
           override: true
           components: rustfmt, clippy, rust-src
     - name: Build
