--- a/.github/workflows/rust-nightly-ci.yml
+++ b/.github/workflows/rust-nightly-ci.yml
@@ -16,6 +16,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/cache@v2
+      with:
+        path: |
+          /usr/bin/aarch64-linux-gnu-*
+        key: deps
+    - name: Install dependancies
+      run: apt install binutils-aarch64-linux-gnu clang -y
     - uses: actions/checkout@v2
     - uses: actions/cache@v2
       with:
