--- a/.github/workflows/rust-nightly-ci.yml
+++ b/.github/workflows/rust-nightly-ci.yml
@@ -22,7 +22,7 @@ jobs:
           /usr/bin/aarch64-linux-gnu-*
         key: deps
     - name: Install dependancies
-      run: apt install binutils-aarch64-linux-gnu clang -y
+      run: sudo apt install binutils-aarch64-linux-gnu clang -y
     - uses: actions/checkout@v2
     - uses: actions/cache@v2
       with:
