--- a/.github/workflows/bold-build.yml
+++ b/.github/workflows/bold-build.yml
@@ -17,7 +17,7 @@ jobs:
       options: -w /wd
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v1
+        uses: actions/checkout@main
         with:
           submodules: recursive
       - name: Cache Cargo packages
