--- a/.github/workflows/bold-build.yml
+++ b/.github/workflows/bold-build.yml
@@ -1,9 +1,10 @@
-name: Build BoldOS
+name: "Build BoldOS"
+
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
   workflow_dispatch:
 
 jobs:
@@ -28,7 +29,7 @@ jobs:
         run: docker run --rm -w /wd -v ${{github.workspace}}:/wd -v /tmp/cargo-registry-cache:/root/.cargo/registry -v /tmp/xargo-cache:/root/.xargo -v /tmp/build-cache:/wd/target wazzaps/boldos-build 'bash' '-c' '. $HOME/.cargo/env && xargo build --release'
       - name: Clippy
         run: docker run --rm -w /wd -v ${{github.workspace}}:/wd -v /tmp/cargo-registry-cache:/root/.cargo/registry -v /tmp/xargo-cache:/root/.xargo -v /tmp/build-cache:/wd/target wazzaps/boldos-build 'bash' '-c' '. $HOME/.cargo/env && cargo clippy --release'
-#        continue-on-error: true
+      #        continue-on-error: true
       - name: Build Kernel Accessories
         run: docker run --rm -w /wd -v ${{github.workspace}}:/wd -v /tmp/cargo-registry-cache:/root/.cargo/registry -v /tmp/xargo-cache:/root/.xargo -v /tmp/build-cache:/wd/target wazzaps/boldos-build 'bash' '-c' '. $HOME/.cargo/env && ./scripts/prepare_kernel_accessories.sh target/aarch64-none-elf/release/boldos'
       - name: Fix cache permissions
