--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -8,12 +8,12 @@ jobs:
     steps:
       - name: Pull Request Labeler
         uses: actions/labeler@v3
-      - name: RegEx Issue Labeler
-        uses: github/issue-labeler@v2.4
+        with:
+            repo-token: ${{ github.token }}
       - name: Label the PR size
         uses: codelytv/pr-size-labeler@v1.6.0
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
           xs_max_size: "10"
           s_max_size: "100"
           m_max_size: "500"
