--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -1,11 +1,14 @@
 name: Automatic Rebase
 on:
+  pull_request:
+    types: [opened]
   issue_comment:
     types: [created]
+    
 jobs:
   rebase:
     name: Rebase
-    if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/rebase')
+    if: github.event.pull_request.opened || (github.event.issue.pull_request != '' && contains(github.event.comment.body, '/rebase'))
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the latest code
