--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -2,6 +2,10 @@ name: "Pull Request Labeler"
 on:
   pull_request_target:
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   triage:
     runs-on: ubuntu-latest
@@ -9,7 +13,8 @@ jobs:
       - name: Pull Request Labeler
         uses: actions/labeler@v3
         with:
-            repo-token: ${{ github.token }}
+          repo-token: ${{ github.token }}
+          sync_lables: true
       - name: Label the PR size
         uses: codelytv/pr-size-labeler@v1.6.0
         with:
