--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/labeler@v3
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          sync_lables: true
+          sync-lables: true
       - name: Label the PR size
         uses: codelytv/pr-size-labeler@v1.6.0
         with:
