--- a/.github/workflows/rust-nightly-ci.yml
+++ b/.github/workflows/rust-nightly-ci.yml
@@ -2,9 +2,15 @@ name: Nightly Rust CI Build
 
 on:
   push:
-    branches: [ master ]
+    branches: [master develop]
+    paths:
+      - ".github/workflows/rust-nightly-ci.yaml"
+      - "src/*"
+      - "scripts/prepare_kernel_accessories.sh"
+      - "Cargo.{toml,lock}"
+      - "targets/*"
   pull_request:
-    branches: [ master ]
+    branches: [master develop]
   workflow_dispatch:
 
 env:
@@ -15,35 +21,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/cache@v2
-      with:
-        path: |
-          /usr/bin/aarch64-linux-gnu-*
-        key: deps
-    - name: Install dependancies
-      run: sudo apt install binutils-aarch64-linux-gnu clang -y
-    - uses: actions/checkout@v1
-      with:
-        submodules: recursive
-    - uses: actions/cache@v2
-      with:
-        path: |
-          ~/.cargo/bin/
-          ~/.cargo/registry/index/
-          ~/.cargo/registry/cache/
-          ~/.cargo/git/db/
-          target/
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-    - name: Install latest nightly
-      uses: actions-rs/toolchain@v1
-      with:
+      - uses: actions/cache@v2
+        with:
+          path: |
+            /usr/bin/aarch64-linux-gnu-*
+          key: deps
+      - name: Install dependancies
+        run: sudo apt install binutils-aarch64-linux-gnu clang -y
+      - uses: actions/checkout@v1
+        with:
+          submodules: recursive
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Install latest nightly
+        uses: actions-rs/toolchain@v1
+        with:
           toolchain: nightly
           profile: minimal
           override: true
           components: rustfmt, clippy, rust-src
-    - name: Build
-      run: cargo build --release --verbose
-    - name: Clippy
-      run: cargo clippy --release
+      - name: Build
+        run: cargo build --release --verbose
+      - name: Clippy
+        run: cargo clippy --release
 #     - name: Run tests
 #       run: cargo test --verbose
