--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -5,6 +5,7 @@ on:
 permissions:
   contents: read
   pull-requests: write
+  # issues: write
 
 jobs:
   triage:
@@ -16,7 +17,7 @@ jobs:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
           sync-labels: true
       - name: Label the PR size
-        uses: codelytv/pr-size-labeler@v1
+        uses: codelytv/pr-size-labeler@v1.6.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           xs_max_size: "10"
@@ -24,8 +25,7 @@ jobs:
           m_max_size: "500"
           l_max_size: "1000"
           fail_if_xl: "false"
-          message_if_xl: >
-            'This PR exceeds the recommended size of 1000 lines.
-            Please make sure you are NOT addressing multiple issues with one PR.
-            Note this PR might be rejected due to its size.’
-          github_api_url: "api.github.com"
+          # message_if_xl: >
+          #   'This PR exceeds the recommended size of 1000 lines.
+          #   Please make sure you are NOT addressing multiple issues with one PR.
+          #   Note this PR might be rejected due to its size.’
