--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,5 @@ arrayvec = { version = "0.7.1", default-features = false }
 dtb = "0.2.0"
 tar-parser = { path = "externals/tar-parser.rs", default-features = false}
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+cortex-a = "6.1.0"
+tock-registers = "0.7.0"
