--- a/.github/workflows/bold-build.yml
+++ b/.github/workflows/bold-build.yml
@@ -2,7 +2,7 @@ name: "Build BoldOS"
 
 on:
   push:
-    branches: [master develop]
+    branches: [master]
     paths:
       - ".github/workflows/bold-build.yaml"
       - "src/*"
@@ -10,7 +10,7 @@ on:
       - "Cargo.{toml,lock}"
       - "targets/*"
   pull_request:
-    branches: [master develop]
+    branches: [master]
   workflow_dispatch:
 
 jobs:
