usb: dwc2: Initialize the DesignWare OTG USB controller (seems to work in QEMU)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,4 @@ lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 cortex-a = "6.1.0"
 tock-registers = "0.7.0"
 num_enum = { version = "0.5.4", default-features = false }
+c2rust-bitfields = { version = "0.3.0", features = ["no_std"] }
