Added Circle as a co-operating system to handle USB Switch to buddy allocator for performance (circle is allocation-happy) Wrap allocator with IrqLock (circle allocates in interrupts too) Add support for a simple ("cooked") stream of characters from a keyboard Add support for listing threads Increase ktask stack size Don't mask FIQs (required by circle spinlocks)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "externals/tar-parser.rs"]
 	path = externals/tar-parser.rs
 	url = https://github.com/Raz-B/tar-parser.rs.git
+[submodule "externals/csud-sys/vendor"]
+	path = externals/csud-sys/vendor
+	url = git@github.com:Chadderz121/csud.git
+[submodule "externals/circle-sys/vendor"]
+	path = externals/circle-sys/vendor
+	url = git@github.com:rsta2/circle.git
